--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=7.2",
-		"codeigniter4/framework": "^4"
+		"codeigniter4/framework": "^4",
+		"monken/cli-create": "^0.3.1",
+		"fzaninotto/faker": "^1.9"
 	},
 	"require-dev": {
-		"fzaninotto/faker": "^1.9@dev",
 		"mikey179/vfsstream": "1.6.*",
 		"phpunit/phpunit": "^8.5"
 	},
