--- a/.env
+++ b/.env
@@ -50,7 +50,7 @@ app.baseURL = 'http://https://appntmnt.herokuapp.com/'
 #--------------------------------------------------------------------
 
 #database.default.hostname = 127.0.0.1:3306
-database.default.database = appntmnt
+database.default.database = ./app/db/database.sqlite
 #database.default.username = root
 #database.default.password = root
 #database.default.DBDriver = MySQLi
